# LeibnizFast

./: .gitignore  CLAUDE.md  Cargo.toml  GUIDE.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.claude/commands/: add-colormap.md  add-interaction.md  add-perf.md  check.md  update-docs.md
.claude/hooks/: command-guard.sh  quality-check.sh
.claude/rules/: general-practices.md  rust.md  typescript.md  webgpu.md
.claude/skills/rust-perf-instrumentation/: SKILL.md
.claude/skills/ts-perf-instrumentation/: SKILL.md
docs/: getting-started.md  index.md
docs/.vitepress/: config.ts
docs/api/: axes.md  leibniz-fast.md  types.md
docs/guide/: chart-customization.md  initialization.md  interaction.md  static-data.md  streaming-full-frame.md  streaming-waterfall.md
examples/basic/: index.html  main.js
examples/chart/: index.html  main.js
examples/cpp-stream/: COMPRESSION.md  bridge.py  generator  generator.cpp  index.html  main.js
examples/gpu-gen/: index.html  main.js
examples/waterfall/: bridge.py  generator.cpp  index.html  main.js
js/: axes.ts  index.ts  types.ts
src/: camera.rs  chunked_upload.rs  colormap.rs  colormap_data.rs  interaction.rs  lib.rs  matrix.rs  perf.rs  pipeline.rs  renderer.rs  tile_grid.rs
src/shaders/: colormap.wgsl  render.wgsl
