[package]
name = "leibniz-fast"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated 2D matrix visualization for the browser"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "24", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
console_log = { version = "1", features = ["color"] }
bytemuck = { version = "1", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
